--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,70 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Mean app - mongoose - express - node - mongodb</title>
+	<link rel="stylesheet" href="styles/foundation.css">
+	<link rel="stylesheet" href="styles/extrem.css">
 </head>
 <body>
-<h1>Holaaaaa!</h1>
+<header>
+<nav class="top-bar" data-topbar role="navigation">
+  <ul class="title-area">
+    <li class="name">
+      <h1><a href="#">xTREME sPORTS</a></h1>
+    </li>
+     <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
+    <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
+  </ul>
+
+  <section class="top-bar-section">
+    <!-- Right Nav Section -->
+    <ul class="right">
+      <li><a href="#">Right Button Active</a></li>
+      <li class="has-dropdown">
+        <a href="#">Right Button Dropdown</a>
+        <ul class="dropdown">
+          <li><a href="#">First link in dropdown</a></li>
+          <li><a href="#">Active link in dropdown</a></li>
+        </ul>
+      </li>
+    </ul>
+
+    <!-- Left Nav Section -->
+    <ul class="left">
+      <li><a href="#">Left Nav Button</a></li>
+    </ul>
+  </section>
+</nav> <!-- final menu navegacion -->
+
+<div class="row">
+	<div class="panel" id="imghome">
+		<h1>XTRE<strong>M</strong> SPORT<strong>S</strong></h1>
+	</div>
+</div>
+</header>
+
+
+  <!-- angularjs -->
+  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.17/angular.min.js" type="text/javascript"></script>
+  <!-- JQuery -->
+  <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+
+  <!-- jquery.ui  -->
+  <script src="//cdnjs.cloudflare.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
+  <!-- angular ui.route -->
+  <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.8/angular-ui-router.min.js"></script>
+  <!-- angular animate -->
+  <script src="https://code.angularjs.org/1.2.25/angular-animate.js"></script>
+  <!-- core, controllers and scripts -->
+  <!-- foundadion javascript -->
+  <script style="text/javascript" src="js/foundation.min.js"></script>
+  <script>
+      $(document).ready(function(){
+      	  $(document).foundation();
+	      $( "li" ).bind( "mouseenter mouseleave", function() {
+  			 $( this ).toggleClass( "active" );
+		  });	
+      });
+
+    </script>
 </body>
 </html>
