--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="xtremeApp">
 <head>
 	<meta charset="UTF-8">
 	<title>Mean app - mongoose - express - node - mongodb</title>
 	<link rel="stylesheet" href="styles/foundation.css">
 	<link rel="stylesheet" href="styles/extrem.css">
+  <link href='http://fonts.googleapis.com/css?family=Londrina+Outline' rel='stylesheet' type='text/css'>
+  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="styles/animacion.css">
 </head>
 <body>
 <header>
 <nav class="top-bar" data-topbar role="navigation">
   <ul class="title-area">
     <li class="name">
-      <h1><a href="#">xTREME sPORTS</a></h1>
+      <h1><a class="londrina" href="#"><strong>xTREME sPORTS</strong></a></h1>
     </li>
      <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
     <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
@@ -32,18 +35,13 @@
 
     <!-- Left Nav Section -->
     <ul class="left">
-      <li><a href="#">Left Nav Button</a></li>
+      <li><a ui-sref=".adventures">Adventures</a></li>
+      <li><a ui-sref=".create">Create Adventure</a></li>
     </ul>
   </section>
 </nav> <!-- final menu navegacion -->
-
-<div class="row">
-	<div class="panel" id="imghome">
-		<h1>XTRE<strong>M</strong> SPORT<strong>S</strong></h1>
-	</div>
-</div>
 </header>
-
+<div id="vista" class="difuminar" ui-view autoscroll="false"></div>
 
   <!-- angularjs -->
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.17/angular.min.js" type="text/javascript"></script>
@@ -58,13 +56,15 @@
   <script src="https://code.angularjs.org/1.2.25/angular-animate.js"></script>
   <!-- core, controllers and scripts -->
   <!-- foundadion javascript -->
-  <script style="text/javascript" src="js/foundation.min.js"></script>
+  <script style="text/javascript" src="js/lib/foundation.min.js"></script>
+  <!-- app.js -->
+  <script src="js/app.js"></script>
   <script>
       $(document).ready(function(){
       	  $(document).foundation();
 	      $( "li" ).bind( "mouseenter mouseleave", function() {
-  			 $( this ).toggleClass( "active" );
-		  });	
+  			   $( this ).toggleClass( "active" );
+		    });
       });
 
     </script>
