--- a/public/index.html
+++ b/public/index.html
@@ -57,8 +57,9 @@
   <!-- core, controllers and scripts -->
   <!-- foundadion javascript -->
   <script style="text/javascript" src="js/lib/foundation.min.js"></script>
-  <!-- app.js -->
+  <!-- app.js and controllers  -->
   <script src="js/app.js"></script>
+  <script src="js/controller/createCtrl.js"></script>
   <script>
       $(document).ready(function(){
       	  $(document).foundation();
