--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,9 @@
 </nav> <!-- final menu navegacion -->
 </header>
 <div id="vista" class="difuminar" ui-view autoscroll="false"></div>
+<pre>
+  {{formData}}
+</pre>
 
   <!-- angularjs -->
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.17/angular.min.js" type="text/javascript"></script>
