--- a/public/index.html
+++ b/public/index.html
@@ -63,6 +63,7 @@
   <!-- app.js and controllers  -->
   <script src="js/app.js"></script>
   <script src="js/controller/createCtrl.js"></script>
+  <script src="js/controller/todasCtrl.js"></script>
   <script>
       $(document).ready(function(){
       	  $(document).foundation();
