--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,6 @@
 	<meta charset="UTF-8">
 	<title>Mean app - mongoose - express - node - mongodb</title>
 	<link rel="stylesheet" href="styles/lib/foundation.css">
-	
   <link href='http://fonts.googleapis.com/css?family=Londrina+Outline' rel='stylesheet' type='text/css'>
   <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
   <link rel="stylesheet" href="styles/animacion.css">
@@ -50,7 +49,7 @@
   <!-- angularjs -->
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.17/angular.min.js" type="text/javascript"></script>
   <!-- JQuery -->
- 
+  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.js"></script>
   <!-- jquery.ui  -->
   <script src="//cdnjs.cloudflare.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
   <!-- angular ui.route -->
@@ -65,8 +64,7 @@
   <script src="js/controller/createCtrl.js"></script>
   <script src="js/controller/todasCtrl.js"></script>
   <!-- reveal (modals)-->
-  <script type="text/javascript" src="http://code.jquery.com/jquery-1.6.min.js"></script>
-  <script type="text/javascript" src="js/lib/jquery.reveal.js"></script>
+  
   <script>
       $(document).ready(function(){
       	$(document).foundation();
